--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 				<div class="character-card-data">
 					<img class="character-img" src="img/KKD.jpg">
 					<div class="character-card-name">Крылов Кирилл Дмитриевич</div>
-					<div class="character-card-blue1">Руководитель отдела  чистовых материалов</div>
+					<div class="character-card-blue1">Руководитель отдела  снабжения</div>
 					<div class="character-card-description"></div>
 				</div>
 				<div class="character-card-button">
